fix(css): prevent layout breaking at small viewport

--- a/practice-two/src/styles/sections/team.css
+++ b/practice-two/src/styles/sections/team.css
@@ -13,7 +13,7 @@
 
 .team-members {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 285px);
+  grid-template-columns: repeat(auto-fill, minmax(auto, 285px));
   gap: 36px 0;
   justify-content: center;
 }
